UHF-1733: Add new spacing variable, change paragraph title margins to bottom, fix line-height to 1 on all headers

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,7 +3,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6  {
   hyphens: auto;
   line-height: $lineheight-m;
   margin: $spacing-double 0 0;
@@ -14,8 +14,14 @@ h6 {
   }
 }
 
+h1,
+h2,
+h3 {
+  line-height: $lineheight-s;
+}
+
 h1 {
-  @include font-size($fontsize-heading-xl, $lineheight-s);
+  @include font-size($fontsize-heading-xl);
   font-weight: $font-weight-regular;
 
   @include breakpoint($breakpoint-m) {
