--- a/src/scss/components/paragraphs/_list-of-links.scss
+++ b/src/scss/components/paragraphs/_list-of-links.scss
@@ -2,10 +2,21 @@ $item_spacing: $spacing-triple;
 
 .list-of-links {
   margin-top: $spacing-double;
+  max-width: 640px;
 
   @include breakpoint($breakpoint-l) {
     margin-top: $spacing-quadruple;
   }
+}
+
+.list-of-links__container {
+  @include breakpoint(max-width $breakpoint-s) {
+    max-width: 100%;
+  }
+}
+
+.list-of-links__title {
+  margin-bottom: $spacing-triple;
 }
 
 .list-of-links__content {
@@ -20,12 +31,6 @@ $item_spacing: $spacing-triple;
     flex-direction: row;
     margin-left: -$item_spacing;
     width: calc(100% + #{$item_spacing});
-  }
-}
-
-.list-of-links__container {
-  @include breakpoint(max-width $breakpoint-s) {
-    max-width: 100%;
   }
 }
 
@@ -205,14 +210,6 @@ $item_spacing: $spacing-triple;
       .list-of-links__item__title {
         text-decoration: none;
       }
-    }
-  }
-
-  .list-of-links__title {
-    margin-bottom: $spacing-double;
-
-    @include breakpoint($breakpoint-l) {
-      margin-bottom: $spacing-quadruple;
     }
   }
 }
